gobmkida/c0/delete_persistent_reading_cache_entry
/data/output_dir/patch/gobmk/ida/clang/O0/gobmk-clang-O0/delete_persistent_reading_cache_entry/src/engine/persistent.c:984:9: error: use of undeclared identifier 'reading_cache'
sizeof( reading_cache)); 
        ^
1 error generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O0/gobmk-clang-O0/delete_persistent_reading_cache_entry/src/obj/1/persistent.o] Error 1
